--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "doc/conferences/20160323_CompleNet"]
 	path = doc/conferences/20160323_CompleNet
 	url = git@github.com:simoncarrignon/20160323_CompleNet.git
+[submodule "dev/acacia-coop"]
+	path = dev/acacia-coop
+	url = git@github.com:simoncarrignon/acacia-coop.git
