[MEDEA] version avec fitprop qui semble marcher

--- a/dev/Roborobo/prj/mEDEA-sp/propertieFiles/sparsity.properties
+++ b/dev/Roborobo/prj/mEDEA-sp/propertieFiles/sparsity.properties
@@ -122,12 +122,12 @@ gNoDenPenTime = 0
 # general parameters for the self-adaptive alg. and experiment
 gSwarmOnlineObsUsed = true
 gDynamicSigma = true
-gSigmaMin = 0.1 # lu15h26 0.0001   # di00h00 0.01
+gSigmaMin = 0.01 # lu15h26 0.0001   # di00h00 0.01
 gProbAdd = 0.5
 gProbSub = 0.5
 gDynaStep = 0.35
 gSigmaRef = 0.1
-gSigmaMax = 0.9
+gSigmaMax = 0.5
 gProbRef = 0.5
 gProbMax = 0.5
 gDriftEvaluationRate = 1.0
@@ -188,6 +188,7 @@ gAreaHeight =                                           0
 # radio com network info
 
 gRadioNetwork =                                        false
-gSparsity = 800
+gSparsity = 900
 gTournamentSize = 0
+gSelectionMethod = 2
 
