add pandora to submodule list

--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "dev/csss-emerge"]
 	path = dev/csss-emerge
 	url = git@github.com:simoncarrignon/csss-emerge.git
+[submodule "dev/pandora"]
+	path = dev/pandora
+	url = git@github.com:xrubio/pandora.git
