--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "dev/pandora"]
 	path = dev/pandora
 	url = git@github.com:xrubio/pandora.git
+[submodule "dev/abc-pandora"]
+	path = dev/abc-pandora
+	url = git@framagit.org:simoncarrignon/abc-pandora.git
