--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "dev/abc-pandora"]
 	path = dev/abc-pandora
 	url = git@framagit.org:simoncarrignon/abc-pandora.git
+[submodule "dev/Lichen-s-project"]
+	path = dev/Lichen-s-project
+	url = git@github.com:ainaollevila/Lichen-s-project.git
