--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "doc/conferences/201709_CCS/ecc17"]
 	path = doc/conferences/201709_CCS/ecc17
 	url = https://framagit.org/sc/ecc17
+[submodule "dev/wine-competition"]
+	path = dev/wine-competition
+	url = git@framagit.org:sc/wine-competition.git
