--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "full_projects/icrates_abc"]
 	path = full_projects/icrates_abc
 	url = git@framagit.org:sc/icrates_abc.git
+[submodule "dev/cultural-isolation"]
+	path = dev/cultural-isolation
+	url = git@framagit.org:sc/cultural-isolation.git
