--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "dev/cultural-isolation"]
 	path = dev/cultural-isolation
 	url = git@framagit.org:sc/cultural-isolation.git
+[submodule "dev/exp-growth"]
+	path = dev/exp-growth
+	url = git@framagit.org:sc/exp-growth.git
