--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "dev/cultural-isolation"]
 	path = dev/cultural-isolation
 	url = git@framagit.org:sc/cultural-isolation.git
+[submodule "dev/spread"]
+	path = dev/spread
+	url = git@framagit.org:sc/spread.git
